# AdvancedCProgrammingCourse

./: CMakeLists.txt  README.md
1_VariableLenghtArrays/: CMakeLists.txt
1_VariableLenghtArrays/app/: main.c
2_FlexibleArrayMembers/: CMakeLists.txt
2_FlexibleArrayMembers/app/: main.c
2_FlexibleArrayMembers/include/: my_lib.h
2_FlexibleArrayMembers/src/: my_lib.c
3_ComplexNumberTypes/: CMakeLists.txt
3_ComplexNumberTypes/app/: main.c
B-Dummy/: CMakeLists.txt
B-Dummy/app/: main.c
BasicStructure/: CMakeLists.txt  main.c  my_lib.c  my_lib.h
BasicStructure/src/: my_lib.c
